--- a/app/views/instalacion/salajuegos.html.erb
+++ b/app/views/instalacion/salajuegos.html.erb
@@ -244,7 +244,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
       <div class="wrapper">
         <div class="container_12">
           <div class="grid_12">
-            <h1>Restaurante Pergaminos</h1>
+            <h1><%=t :restaurante_pergaminos%></h1>
             
           </div>
         </div>
@@ -335,10 +335,10 @@ right:auto;
         </script>  
 </div>
 <div class="grid_6">
-            <h3>Restaurante Pergaminos</h3>
-            <p>El restaurante del hotel "Pergaminos" ofrece un ambiente relajado y exclusivo con deliciosos platillos nacionales e internacionales preparados siempre con los ingredientes más frescos. El servicio de habitación está disponible de 6:00 am a 11:00 pm con platillos fríos y calientes, proporcionándoles una experiencia culinaria en la comodidad de su habitación.</p>
+            <h3><%=t :restaurante_pergaminos%></h3>
+            <p><%=t :restaurante_texto%></p>
 <br>
-<h3> Horario Restaurante: 7 am - 10:30 pm </h3>
+<h3><%=t :horario%>: 7:00 a.m. to 10:30 pm</h3>
 </div>
      </div>
 
