--- a/app/views/instalacion/bar.html.erb
+++ b/app/views/instalacion/bar.html.erb
@@ -331,11 +331,11 @@ right:auto;
         </script>  
 </div>
 <div class="grid_6">
-            <h3>Bar El Capitan</h3>
-            <p>Después de un dia dificil, disfrute de una refrescante bebida en el bar del hotel "El Capitán" ofreciéndole una variedad muy amplia de cocteles y bebidas nacionales e internacionales en un ambiente exclusivo y único.</p>
+            <h3><%=t :bar%></h3>
+            <p><%=t :bar_texto%></p>
 <br>
-<h3> Horario Bar: 5:00 pm - 11:00 pm </h3>
-<h3> Happy Hour : 5:00 pm - 08:00 pm </h3>
+<h3> <%=t :horario_bar%>: 5:00 pm - 11:00 pm </h3>
+<h3> <%=t :happy_hour%> : 5:00 pm - 08:00 pm </h3>
 </div>
      </div>
 
