--- a/app/views/instalacion/eventos.html.erb
+++ b/app/views/instalacion/eventos.html.erb
@@ -330,12 +330,12 @@ right:auto;
 </div>
 <div class="grid_6"C>
             <h3><%=t :eventos_banquetes%></h3>
-            <p>Hotel Clarión San Pedro Sula cuenta con modernos y amplios salones con capacidad para 200 personas,equipados con sistemas de luces graduales y tecnologia de punta en audiovisuales. Estamos comprometidos a asegurar que su evento sea único y se lleven a sus invitados una experiencia inolvidable.</p>
+            <p><%=t :eventos_texto%></p>
 <br>
-<h3> Horario : 8:00 am - 5:00 pm</h3>
-<h3> Contacto </h3>
+<h3> <%=t :horario%> : 8:00 am - 5:00 pm</h3>
+<h3> <%=t :contacto%> </h3>
 Carolina Fajardo<br>
-Correo: banquetes@hotelclarionsps.com
+<%=t :correo%>: banquetes@hotelclarionsps.com
 </div>
      </div>
 
