--- a/app/views/instalacion/condominios.html.erb
+++ b/app/views/instalacion/condominios.html.erb
@@ -305,10 +305,8 @@ right:auto;
           <div class="grid_6">
          <h3> <%=t :condominios_clarion%></h3>
 
-<p>        Disfrute de largas estadias en nuestras comodos y amplios condominios. Todos estan equipados con sala,comedor,cocina,refrigeradora,camas queen,internet de alta velocidad,Tv's Plasma y amplios baños.</p>
-<h3>Contacto</h3>
+<p><%=t :condominio_texto%></p>
 
-definir correo
      
             </div>
      
