--- a/app/views/instalacion/gym.html.erb
+++ b/app/views/instalacion/gym.html.erb
@@ -332,10 +332,10 @@ right:auto;
         </script>  
 </div>
 <div class="grid_6">
-            <h3>Gimnasio / Sauna</h3>
-            <p>El hotel cuenta con un relajante sauna y un gimnasio completamente equipado.</p>
+            <h3>Gym / Sauna</h3>
+            <p><%=t :gym_texto%></p>
 <br>
-<h3> Horario : 24 Hrs disponible </h3>
+<h3> <%=t :horario%> : 24 Hrs </h3>
 
 </div>
      </div>
