--- a/app/views/instalacion/negocios.html.erb
+++ b/app/views/instalacion/negocios.html.erb
@@ -329,10 +329,10 @@ right:auto;
         </script>  
 </div>
 <div class="grid_6">
-            <h3>Centro de Negocios</h3>
-            <p>A los viajeros de negocios les ofrecemos comodidades adicionales como acceso al fax,fotocopiadora,impresiones y escaneados en nuestro centro de negocios con ordenador a acceso a internet de alta velocidad.</p>
+            <h3><%=t :centro_de_negocio%></h3>
+            <p><%=t :centro_de_texto%></p>
 <br>
-<h3> Horario : 24 Hrs disponible </h3>
+	    <h3> <%=t :horario%> : 24 Hrs </h3> 
 
 </div>
      </div>
