--- a/public/style.css
+++ b/public/style.css
@@ -92,9 +92,9 @@ a.btn-style2:active { border: 1px solid #aaa; border-bottom: 1px solid #888; -mo
 .ptn-3 {background-image:url(images/pattern/ptn-03.png);}
 .ptn-4 {background-image:url(images/pattern/ptn-04.png);}
 .ptn-5 {background-image:url(images/pattern/ptn-05.png);}
-.ptn-6 {background-image:url(images/pattern/ptn-06.png);}
-.ptn-7 {background-image:url(images/pattern/ptn-07.png);}
-.ptn-8 {background-image:url(images/pattern/ptn-08.png);}
+.ptn-6 {background-image:url(images/pattern/ptn-06.jpg);}
+.ptn-7 {background-image:url(images/pattern/ptn-07.jpg);}
+.ptn-8 {background-image:url(images/pattern/ptn-08.jpg);}
 .ptn-9 {background-image:url(images/pattern/ptn-09.png);}
 .ptn-10 {background-image:url(images/pattern/ptn-10.png);}
 .ptn-11 {background-image:url(images/pattern/ptn-11.png);}
