--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -270,7 +270,7 @@ body {background-image:url(images/pattern/ptn-04.png);}
             <option value='Bentham' />Bentham
 
             <option value='Bevan' />Bevan
-
+Bienvenidos a Hotel Clarion San Pedro Sula
             <option value='Buda:light' />Buda
 
             <option value='Cabin' />Cabin
