--- a/app/views/reservacion/index.html.erb
+++ b/app/views/reservacion/index.html.erb
@@ -436,15 +436,17 @@ for (var ii=0; ii < elements.length; ii++) {
         <p> <%=t :texto_reservaciones%> </p>
             	<h3><%=t :garantia_clarion%></h3>
 
-                <p>* <%=t :texto_garantia_uno%> 
-* <%=t :texto_garantia_dos%>  <br>  <br>
-
-* <%=t :texto_garantia_tres%> <br>  <br>
-
-* <%=t :texto_garantia_cuatro%></p>
+                <p>
+                * <%=t :texto_garantia_uno%> <br>  <br>
+		* <%=t :texto_garantia_dos%>  <br>  <br>
+		* <%=t :texto_garantia_tres%> <br>  <br>
+		* <%=t :texto_garantia_cuatro%>
+		</p>
+                
                 <p><strong> <%=t :direccion_clarion%>: </strong>Ave. Circunvalación, San Pedro Sula, Honduras, C.A.</p>
                 <div class="separator"></div>
                 <p><strong>PBX:</strong> (504)2553-6070 / 25536071 </p>
+                  <div class="separator"></div>
                 <p><strong>Fax:</strong> (504)2552-4570</p>
                 <div class="separator"></div>
                 <p><strong>Email:</strong>  reservaciones@hotelclarionsps.com</p>
