--- a/public/reset.css
+++ b/public/reset.css
@@ -22,6 +22,7 @@ time, mark, audio, video {
 	font-size: 100%;
 	vertical-align: baseline;
 	font-family: inherit;
+	font-size:1.3em
 }
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
